# snmpc

./: .gitmodules  CMakeLists.txt  kinematic_bicycle.cpp  kinematic_bicycle.hpp  kinematic_bicycle_mpc.cpp  kinematic_robot.cpp  kinematic_robot.hpp  kinematic_robot_test.cpp  main.cpp  matplotlibcpp.cpp  mobile_robot_new.cpp  mobile_robot_new.h  mobile_robot_test.cpp  simple_bicycle.cpp  simple_bicycle.hpp  simple_bicycle_mpc.cpp  visualization_tools.cpp  visualization_tools.h  wheeldyn_bicycle.cpp  wheeldyn_bicycle.h  wheeldyn_bicycle_mpc.cpp
Dynamics/: dyncar_bicycle.cpp  dyncar_bicycle.h  kinematic_robot.cpp  kinematic_robot.hpp
log/: sol_traj.txt
